# myx_game_enginge

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini  myx_game_engine.slnx  vcpkg.json
.github/: copilot-instructions.md
docs/: app_layer_architecture.md  bugfix_tracking.md  event_system.md  glad_integration.md  imgui_integration.md  window_system.md
engine_core/: CMakeLists.txt  engine_core.vcxproj  engine_core.vcxproj.filters
engine_core/src/: engine_core.h  test.cpp  test.h
engine_core/src/engine_core/: app.cpp  app.h  entry_point.h  imgui_layer.cpp  imgui_layer.h  layer.cpp  layer.h  layer_stack.h  log.cpp  log.h  test.cpp  test.h  util.h  window.h
engine_core/src/engine_core/event/: event.h  event_dispatcher.h  key_event.h  mouse_event.h  window_event.h
engine_core/src/engine_core/platform/windows/: windows_window.cpp  windows_window.h
sandbox/: CMakeLists.txt  sandbox.vcxproj
sandbox/src/: app.cpp  my_app.cpp
scripts/: setup-vs-env.nu
